# advent-of-code

./: .gitignore  advent_of_code.ml  day1.ml  day2-2.mlb  day2-2.sml  day2.ml  day2_lexer.mll  day2_parser.mly  day3-2.mlb  day3-2.sml  day4.ml  day5.ml  day5_lexer.mll  day6.ml  do  dune  run  util.sml
2020/: day1.sml  day2-1.mlb  day2-1.sml  day2-2.sml  day3-1.mlb  day3-1.sml  do  parsec.sml
2021/: day2_command.ml  day2_lexer.mll  day3.ml  day4.ml  day5_parser.mly  day7.ml
2022/kotlin/src/main/kotlin/: day02.kt  day11.kt  day12.kt  day13.kt  day14.kt
2022/ocaml/: Makefile
2023/ocaml/: aoc2023.opam  dune-project
2023/ocaml/days/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  dune  listlib.ml  main.ml  solutions.ml  stringlib.ml
2024/ocaml/: .gitignore  aoc.opam  dune-project
2024/ocaml/src/: day01.ml  day01_parser.mly  dune  main.ml  solutions.ml
kotlin/src/main/kotlin/: Main.kt  day04.kt  day05.kt  day06.kt  day07.kt  scheme.kt
ocaml/: .gitignore  dune-project
src/main/kotlin/: Main.kt  Parsec.kt  day01.kt  day03.kt  day08.kt  day09.kt  day10.kt  day12.kt  day13.kt  day14.kt  misc.kt
