(lang dune 3.12)

(name aoc2023)

(generate_opam_files true)

(source
 (github peterbb/advent-of-code))

(authors "Peter Brottveit Bock")

(maintainers "Peter Brottveit Bock")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc2023)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

